Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
None
-
None
Description
frew hit a case where there is a committed change config request in the consensus metadata but the COMMIT entry in the WAL is missing. Actually, he noticed it because there were two consecutive COMMIT entries missing (both for change config requests) and tablet startup failed because that is an illegal state to be in (one change config request must commit before the next one starts, per the Raft specification).
I am working on reproducing this, as well as providing a tool to allow for insertion of arbitrary data into a WAL in order to recover from such bugs by generating the COMMIT messages needed to complete tablet bootstrap.